tests/baselines/reference/project/nestedLocalModuleSimpleCase/node/nestedLocalModuleSimpleCase.errors.txt
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
test1.ts(2,23): error TS1147: Import declarations in a namespace cannot reference a module.


!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== test1.ts (1 errors) ====
    export namespace myModule {
     import foo = require("test2");
                          ~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
     //console.log(foo.$);
    }
    
    
    